[gd_scene load_steps=18 format=3 uid="uid://c650xyhtr0c6s"]

[ext_resource type="Script" path="res://Old/Game_R.gd" id="1_id7qc"]
[ext_resource type="Texture2D" uid="uid://c5uigpl4qx5dh" path="res://Old/enemies-Sheet.png" id="3_l0k0h"]
[ext_resource type="AudioStream" uid="uid://bb2u1up32exev" path="res://Old/MVRebellionhololive English -Advent- Debut Song.mp3" id="4_3kyim"]
[ext_resource type="PackedScene" uid="uid://b6dbh318yhxpi" path="res://Old/idle_arrow_left.tscn" id="4_5cmi7"]
[ext_resource type="PackedScene" uid="uid://carwf05f27ylq" path="res://Old/idle_arrow_up.tscn" id="4_crsw8"]
[ext_resource type="PackedScene" uid="uid://bwrd53fmreaja" path="res://Old/idle_arrow_down.tscn" id="5_68vuc"]
[ext_resource type="PackedScene" uid="uid://lag2l820lkdm" path="res://Old/idle_arrow_right.tscn" id="6_gpj1r"]
[ext_resource type="FontFile" uid="uid://06djxm4iqomb" path="res://Old/PixelGameFont.ttf" id="7_fppcn"]
[ext_resource type="Script" path="res://Old/Rhythm_score.gd" id="7_yd26l"]
[ext_resource type="AudioStream" uid="uid://dqgpsrw80jjn2" path="res://bgm/ping-82822.wav" id="10_capt6"]
[ext_resource type="Texture2D" uid="uid://cqa37pwyeew03" path="res://art2/UI_transparant.png" id="11_s3uat"]

[sub_resource type="Animation" id="Animation_ocmmt"]
resource_name = "Game_rhythm"
length = 151.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.342872, 151.065),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(14.6, 14.9, 15.2, 15.5, 15.8, 16.1, 16.4, 16.9, 17.3, 17.7, 18.1, 18.6, 19.1, 19.5, 19.7, 20, 20.4, 20.9, 21.4, 21.8, 22.2, 22.7, 23.2, 23.6, 24.1, 24.5, 25, 25.4, 25.8, 26.3, 26.8, 27.2, 27.7, 28.1, 28.6, 29.1, 29.6, 29.9, 30.4, 30.9, 31.3, 32, 32.4, 33.5, 34, 34.5, 35, 35.4, 35.8, 36.2, 36.7, 37.1, 37.6, 38, 38.5, 39, 39.4, 39.9, 40.3, 40.8, 41.3, 41.7, 42.2, 42.6, 43.1, 43.5, 43.9, 44.4, 44.9, 45.2, 45.7, 46.2, 46.7, 47.1, 47.4, 48.3, 48.7, 49.6, 49.9, 50.5, 51.1, 52.7, 53.9, 55.2, 56.4, 57.6, 59.7, 61.7, 62.2, 62.8, 63.3, 63.8, 64.3, 64.7, 65.1, 65.6, 66, 66.5, 66.9, 67.4, 67.9, 68.3, 68.7, 69.2, 69.7, 70.3, 70.9, 71.4, 71.9, 72.4, 72.9, 73.4, 73.9, 74.3, 74.7, 75.1, 75.5, 76, 76.6, 77.1, 77.6, 78.1, 78.6, 79.1, 79.6, 80, 80.4, 80.9, 81.4, 81.8, 82.3, 82.8, 83.2, 83.8, 84.1, 84.5, 84.8, 85.1, 85.5, 86, 86.4, 86.8, 87.2, 87.7, 88.2, 88.5, 89, 89.5, 90, 90.4, 90.8, 91.3, 91.8, 92.2, 92.7, 93.1, 93.5, 93.8, 94, 94.3, 94.5, 94.8, 95.2, 95.6, 95.9, 96.3, 96.5, 96.8, 97.1, 97.4, 97.7, 98.1, 98.4, 98.7, 99, 99.4, 99.9, 100.3, 100.8, 101.2, 101.7, 102.1, 102.6, 103, 103.4, 103.9, 104.4, 104.9, 105.3, 105.7, 106.2, 106.5, 106.8, 107.1, 107.5, 107.8, 108.3, 108.7, 109.1, 109.5, 109.9, 110.3, 111, 111.4, 112.3, 113.7, 114.9, 116.2, 117.1, 118.3, 119.5, 120.8, 121.6, 122.3, 122.9, 123.4, 123.8, 124.3, 124.7, 125.1, 125.6, 126, 126.5, 127, 127.4, 127.9, 128.3, 128.7, 129.2, 129.8, 130.4, 131, 131.4, 131.9, 132.2, 132.5, 132.7, 132.9, 133.1, 133.7, 134.1, 134.6, 135.1, 135.5, 135.9, 136.4, 136.8, 137.2, 137.7, 138.2, 138.6, 139.1, 139.6, 140.1, 140.6, 141, 141.4, 141.9, 142.3, 142.8, 143.3, 143.8, 144.2, 144.5, 144.8, 145.2, 145.6, 146.1, 146.6, 147.2, 147.9, 148.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"left"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"right"
}, {
"args": [],
"method": &"down"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}, {
"args": [],
"method": &"up"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:stream_paused")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(151.097),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 149.3, 151.118),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-50.0, -50.0, -80.0]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Nerissa:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_l0k0h")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Nerissa:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5, 5.2, 5.4, 5.6, 5.8, 6, 6.2, 6.4, 6.6, 6.8, 7, 7.2, 7.4, 7.6, 7.8, 8, 8.2, 8.4, 8.6, 8.8, 9, 9.2, 9.8, 10, 10.2, 10.4, 10.6, 10.8, 11, 11.2, 11.4, 11.6, 11.8, 12, 12.2, 12.4, 12.6, 12.8, 13, 13.2, 13.4, 13.6, 13.8, 14, 14.2, 14.4, 14.6, 14.8, 15, 15.2, 15.4, 15.6, 15.8, 16, 16.2, 16.4, 16.6, 16.8, 17, 17.2, 17.4, 17.6, 17.8, 18, 18.2, 18.4, 18.6, 18.8, 19, 19.2, 19.4, 19.6, 19.8, 20, 20.2, 20.4, 20.6, 20.8, 21, 21.2, 21.4, 21.6, 21.8, 22, 22.2, 22.4, 22.6, 22.8, 23, 23.2, 23.4, 23.6, 25, 25.2, 25.4, 25.6, 25.8, 26, 26.2, 26.4, 26.6, 26.8, 27, 27.2, 27.4, 27.6, 27.8, 28, 28.2, 28.4, 28.6, 28.8, 29, 29.2, 29.4, 29.6, 29.8, 30, 30.2, 30.4, 30.6, 30.8, 31, 31.2, 31.4, 31.6, 31.8, 32, 32.2, 32.4, 33, 33.2, 33.4, 33.6, 33.8, 34, 34.2, 34.4, 34.6, 34.8, 35, 35.2, 35.4, 35.6, 35.8, 36, 36.2, 36.4, 36.6, 36.8, 37, 37.2, 37.4, 37.6, 37.8, 38, 38.2, 38.4, 38.6, 38.8, 39, 39.2, 39.4, 39.6, 39.8, 40, 40.2, 40.4, 40.6, 40.8, 41, 41.2, 41.4, 41.6, 41.8, 42, 42.2, 42.4, 42.6, 42.8, 43, 43.2, 43.4, 43.6, 43.8, 44, 44.2, 44.4, 44.6, 44.8, 45, 45.2, 45.4, 45.6, 45.8, 46, 46.2, 46.4, 46.6, 46.8, 47, 47.2, 47.4, 47.6, 47.8, 48, 48.2, 48.4, 48.6, 48.8, 49, 49.2, 49.4, 49.6, 49.8, 50, 50.2, 50.4, 50.6, 50.8, 51, 51.2, 51.4, 51.6, 51.8, 52, 52.2, 52.4, 52.6, 52.8, 53, 53.2, 53.4, 53.6, 53.8, 54, 54.2, 54.4, 54.6, 54.8, 55, 55.2, 55.4, 55.6, 55.8, 56, 56.2, 56.4, 56.6, 56.8, 57, 57.2, 57.4, 57.6, 57.8, 58, 58.2, 58.4, 58.6, 58.8, 59, 59.2, 59.4, 59.6, 59.8, 60, 60.2, 60.4, 60.6, 60.8, 61, 61.2, 61.4, 61.6, 61.8, 62, 62.2, 62.4, 62.6, 62.8, 63, 63.2, 63.4, 63.6, 63.8, 64, 64.2, 64.4, 64.6, 64.8, 65, 65.2, 65.4, 65.6, 66.8, 67, 67.2, 67.4, 67.6, 67.8, 68, 68.2, 68.4, 68.6, 68.8, 69, 69.2, 69.4, 69.6, 69.8, 70, 70.2, 70.4, 70.6, 70.8, 71.4, 72.3, 73, 73.8, 74.5, 75.2, 75.9, 76.6, 77.4, 78.2, 78.9, 79.5, 80.2, 80.9, 81.7, 82.4, 83, 83.7, 84.3, 84.6, 84.8, 85, 85.2, 85.4, 85.6, 85.8, 86, 86.2, 86.4, 86.6, 86.8, 87, 87.2, 87.4, 87.6, 87.8, 88, 88.2, 88.4, 88.6, 88.8, 89, 89.2, 89.4, 89.6, 89.8, 90, 90.2, 90.4, 90.6, 90.8, 91, 91.2, 91.4, 91.6, 91.8, 92, 92.2, 92.4, 92.6, 92.8, 93, 93.2, 93.4, 93.6, 93.8, 94, 94.2, 94.4, 94.6, 94.8, 95, 95.2, 95.4, 95.6, 95.8, 96, 96.2, 96.4, 96.6, 96.8, 97, 97.2, 97.4, 97.6, 97.8, 98, 98.2, 98.4, 98.6, 98.8, 99, 99.2, 99.4, 99.6, 99.8, 100, 100.2, 100.4, 100.6, 100.8, 101, 101.2, 101.4, 101.6, 101.8, 102, 102.2, 102.4, 102.6, 102.8, 103, 103.2, 103.4, 103.6, 103.8, 104, 104.2, 104.4, 104.6, 104.8, 105, 105.2, 105.4, 105.6, 105.8, 106, 106.2, 106.4, 106.6, 106.8, 107, 107.2, 107.4, 107.6, 107.8, 108, 108.2, 108.4, 108.6, 108.8, 109, 109.2, 109.4, 109.6, 109.8, 110, 110.2, 110.4, 110.6, 110.8, 111, 111.2, 111.4, 111.6, 111.8, 112, 112.2, 112.4, 112.6, 112.8, 113, 113.2, 113.4, 113.6, 113.8, 114, 114.2, 114.4, 114.6, 114.8, 115, 115.2, 115.4, 115.6, 115.8, 116, 116.2, 116.4, 116.6, 116.8, 117, 117.2, 117.4, 117.6, 117.8, 118, 118.2, 118.4, 118.6, 118.8, 119, 119.2, 119.4, 119.6, 119.8, 120, 120.2, 120.4, 120.6, 120.8, 121, 121.2, 121.4, 121.6, 121.8, 122, 122.2, 122.4, 122.6, 122.8, 123, 123.2, 123.4, 123.6, 123.8, 124, 124.2, 124.4, 124.6, 124.8, 125, 125.2, 125.4, 125.6, 125.8, 126, 126.2, 126.4, 126.6, 126.8, 127, 127.2, 127.4, 127.6, 127.8, 128, 128.7, 129.7, 130.8, 131.8, 132.9, 133.8, 134.9, 135.9, 137, 138, 139.1, 140.1, 141.2, 142.3, 143.4, 144.1, 144.9, 145.7, 146.1, 146.6, 147.1, 147.6, 148.2, 148.8, 149.1, 149.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [93, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 94, 95, 96, 95, 94, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 94, 95, 96, 95, 94, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 94, 95, 96, 95, 94, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 94, 95, 96, 95, 94, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 94, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 94, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 93, 90, 91, 92, 94, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 96, 95, 94, 91]
}

[sub_resource type="Animation" id="Animation_prcq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nerissa:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [90]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u7kxa"]
_data = {
"Game_rhythm": SubResource("Animation_ocmmt"),
"RESET": SubResource("Animation_prcq6")
}

[sub_resource type="Theme" id="Theme_dhymk"]
default_font = ExtResource("7_fppcn")

[sub_resource type="Theme" id="Theme_4i5xg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yte6h"]

[node name="GameR" type="Node2D"]
script = ExtResource("1_id7qc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u7kxa")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3kyim")
volume_db = -50.0
max_distance = 200000.0
bus = &"BGM"

[node name="Nerissa" type="Sprite2D" parent="."]
position = Vector2(244, 103)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_l0k0h")
hframes = 9
vframes = 11
frame = 90

[node name="idle_arrow_left" parent="." instance=ExtResource("4_5cmi7")]
position = Vector2(108, 153)

[node name="idle_arrow_up" parent="." instance=ExtResource("4_crsw8")]
position = Vector2(144, 153)

[node name="idle_arrow_down" parent="." instance=ExtResource("5_68vuc")]
position = Vector2(180, 153)

[node name="idle_arrow_right" parent="." instance=ExtResource("6_gpj1r")]
position = Vector2(216, 153)

[node name="Create" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Create"]
position = Vector2(108, -9)

[node name="Marker2D2" type="Marker2D" parent="Create"]
position = Vector2(144, -9)

[node name="Marker2D3" type="Marker2D" parent="Create"]
position = Vector2(180, -9)

[node name="Marker2D4" type="Marker2D" parent="Create"]
position = Vector2(216, -9)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 27.0
offset_top = 54.0
offset_right = 67.0
offset_bottom = 77.0
theme = SubResource("Theme_dhymk")
script = ExtResource("7_yd26l")

[node name="ProgressBar" type="ProgressBar" parent="Label"]
layout_mode = 0
offset_left = -21.0
offset_top = -4.0
offset_right = -9.0
offset_bottom = 94.0
max_value = 2800.0
fill_mode = 3
show_percentage = false

[node name="ColorRect" type="ColorRect" parent="Label"]
layout_mode = 0
offset_left = -21.0
offset_top = 17.0
offset_right = -9.0
offset_bottom = 18.0
theme = SubResource("Theme_4i5xg")
color = Color(1, 0.494118, 0.427451, 0.521569)

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_capt6")
volume_db = -50.0
bus = &"SFX"

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2(93, 137)
scale = Vector2(1, 0.96875)
texture_normal = ExtResource("11_s3uat")
texture_pressed = ExtResource("11_s3uat")
shape = SubResource("RectangleShape2D_yte6h")
action = "left"

[node name="up" type="TouchScreenButton" parent="."]
position = Vector2(129, 138)
scale = Vector2(1, 0.96875)
texture_normal = ExtResource("11_s3uat")
texture_pressed = ExtResource("11_s3uat")
shape = SubResource("RectangleShape2D_yte6h")
action = "up"

[node name="down" type="TouchScreenButton" parent="."]
position = Vector2(165, 139)
scale = Vector2(1, 0.96875)
texture_normal = ExtResource("11_s3uat")
texture_pressed = ExtResource("11_s3uat")
shape = SubResource("RectangleShape2D_yte6h")
action = "down"

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2(199, 138)
scale = Vector2(1, 0.96875)
texture_normal = ExtResource("11_s3uat")
texture_pressed = ExtResource("11_s3uat")
shape = SubResource("RectangleShape2D_yte6h")
action = "right"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
